# otherworld-bit

./: .gitignore  README.md  data.json  globalvars.py  main.py  oneword.txt  pyproject.toml
calc/: hum.py  owct.py  temp.py  weather.py  weather_warn.py  wind.py
data/: oneword.txt
modules/: cloudflare_status.py  cloudflarestatus.py  enneagram.py  gotrend.py  mbti.py  nima.py  oneword.py  planetinfo.py  status.py  tritype.py  version.py  zuan.py
modules/personalities/: enneagram.py  mbti.py  mbti_oneword.py  oneword.py  tritype.py
